# education-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
telegram-bot/: .gitattributes  .gitignore  Dockerfile  GitHub_модуль_6.json  alembic.ini  chatgpt_test.py  checkpoint.sqlite  course.json  course_plan.json  course_plan_1.json  db.sqlite3  deepseek_test.py  docker-compose.yml  example.py  index.html  langgraph.json  main.py  module_1.json  module_2.json  module_3.json  module_design_example.json  modules.json  output.md  pyproject.toml  requirements.txt  test.py  test_content_generation.py  Иванов_Иван_Модуль0_ИнжинирингПО.md  Инженерия_программного_обеспечения.json  Инженерия_программного_обеспечения_2.json  Тест_модуль_2.json
telegram-bot/app/: settings.py
telegram-bot/app/api/: dependencies.py
telegram-bot/app/app/: schemas.py
telegram-bot/app/core/: errors.py
telegram-bot/app/utils/: browser_automation.py  docs_processing.py  formatting.py  secutiry.py
telegram-bot/data/courses/: Инженерия_ПО.json  Инженерия_программного_обеспечения_2.json
telegram-bot/data/materials/: Lektsia_1_Osnovnye_ponyatia_Programmanaya_inzheneria.pptx  Lektsia_2_ZhTs.pptx  Lektsia_3_Gibkie_metodologii_PO.pptx  Tema1_Programnnaya_inzheneria.pptx
telegram-bot/docs/: README.md  Tekhnicheskoe_zadanie_II_agent.docx
telegram-bot/materials/: Lektsia_1_Osnovnye_ponyatia_Programmanaya_inzheneria.pptx  Lektsia_2_ZhTs.pptx
telegram-bot/migration/: env.py
telegram-bot/migration/versions/: 2026_01_02_1422-69b139a88427_initial_revision.py  2026_01_02_1425-22922d139f08_add_course_to_module_relations.py  2026_01_02_1458-aec0aefe1069_add_assessments_in_module.py  2026_01_03_0638-59d3eebd9b1d_add_attachments.py  2026_01_30_1813-c81c8456959f_initial_revision.py  2026_02_03_1011-5d6d00deb41f_add_users.py  2026_02_11_0842-297b512015db_add_students_tables.py  2026_02_11_0951-fcabcccd6443_fix_students_table.py  2026_02_11_1010-408fd6d0408e_make_nullable_user_id.py  2026_02_18_1813-4eec21ba15f3_initial_revision.py  2026_02_18_1823-0de889c80715_initial_revision.py  2026_02_18_1923-805c2c9d504a_add_tables.py  2026_03_01_1528-3becd51be1fd_add_student_tasks.py  2026_03_01_1818-3ae161e101d2_add_filed_in_student_tasks.py  (+1 more)
telegram-bot/prompts/: content_block_generator.md  content_block_planner.md  mermaid_artist.md  module_designer.md  module_generator.md  response_compiler.md  task_executor.md
telegram-bot/scripts/: init_db.py  Инженерия_программного_обеспечения_2.json
telegram-bot/src/: bot.py  crawler.py  main.py  rag.py  services.py  settings.py  storage.py  utils.py
telegram-bot/tg_bot/: decorators.py  utils.py
(+316 files in other folders)
